@@ -1,0 +1,4 @@
+	.section .gnu.lto_main,"",%progbits
+	.byte 0,0,0,0
+	.section .gnu.lto_.pureconst,"",%progbits
+	.byte 0,0,0,0
